<resources>
    <string name="app_name">Protect Yourself and Your Data</string>
    <string name="action_settings">Settings</string>
    <string name="create_account_title">Create an account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="view_contacts">View Contacts</string>
    <string name="emergency_features">Emergency Features</string>
    <string name="edit_sms">Edit Emergency Message</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="add_contact">Add Emergency Contact</string>
    <string name="create_contact">Create Contact</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="protect_yourself">Protect Yourself</string>
    <string name="protect_your_data">Protect Your Data</string>
    <string name="edit_message">Edit Emergency SMS</string>
    <string name="save_message">Save Message</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_text">Welcome to Protect Yourself and Your Data</string>
    <string name="trigger_protection">PROTECT ME NOW!</string>
    <string name="trigger_protection_info">Pressing this button will send your message, location and bring up the phone activity with your first contact\'s number pre-entered.</string>
    <string name="delete_dcim_files">Select Files To Protect!</string>
    <string name="delete_image_files">Delete Image Files</string>

</resources>
