<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="@string/create_account_title"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/username">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccountBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/create_account" />

</LinearLayout>