<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:weightSum="1"
    tools:context="com.example.muhammad.protectyou1.Protection.ProtectionHomeActivity">

    <ImageView
        android:id="@+id/protectionHomeImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/protectionTriggerBtn"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/protectionTriggerBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/trigger_protection"
        android:layout_above="@+id/emergencyFeaturesTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />

    <!--<TextView-->
        <!--android:id="@+id/protectionTriggerTextView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/trigger_protection_info"-->
        <!--android:textAlignment="center"-->
        <!--android:gravity="center"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->

    <TextView
        android:id="@+id/emergencyFeaturesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:text="@string/emergency_features"
        android:textAlignment="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp" />


    <Button
        android:id="@+id/viewContactsBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/view_contacts"
        android:layout_below="@+id/emergencyFeaturesTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/editEmergencySMSMessageBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center"
        android:padding="8dp"
        android:text="@string/edit_sms"
        android:layout_below="@+id/viewContactsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/back"
        android:layout_below="@+id/editEmergencySMSMessageBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
