<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:weightSum="1"
    tools:context="com.example.muhammad.protectyou1.EditEmergencyMessageActivity">

    <TextView
        android:id="@+id/editEmergencyMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.06"
        android:gravity="center"
        android:text="@string/edit_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


    <EditText
        android:id="@+id/emergencyMessageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmergencyMessageTextView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Emergency Message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveMessageBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emergencyMessageEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/save_message" />


    <Button
        android:id="@+id/cancelBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/saveMessageBtn"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
