<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:weightSum="1"
    tools:context="com.example.muhammad.protectyou1.Protect.ProtectionHomeActivity">

    <ImageView
        android:id="@+id/contactsImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/emergencyContactsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:gravity="center"
        android:text="@string/emergency_contacts"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/addContactsBtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_contacts"
        android:layout_below="@+id/contactsImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/back"
        android:layout_alignBottom="@+id/contactsImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="90dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="370dp"
        android:id="@+id/contactsListView"
        android:choiceMode="none"
        android:fadeScrollbars="false"
        android:background="@color/white"
        android:clickable="false"
        android:drawSelectorOnTop="true"
        android:dividerHeight="1sp"
        android:divider="@color/divider"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        android:contextClickable="true"
        tools:listitem="@android:layout/simple_list_item_1"
        android:layout_below="@+id/backBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
